
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef scalar_t__ uint32_t ;
struct TYPE_3__ {scalar_t__ Status; } ;
typedef scalar_t__ FunctionalState ;
typedef TYPE_1__ ETH_DMADESCTypeDef ;


 scalar_t__ DISABLE ;
 scalar_t__ ETH_DMATxDesc_TCH ;
 int IS_FUNCTIONAL_STATE (scalar_t__) ;
 int assert_param (int ) ;

void ETH_DMATxDescSecondAddressChainedCmd(ETH_DMADESCTypeDef *DMATxDesc, FunctionalState NewState)
{

  assert_param(IS_FUNCTIONAL_STATE(NewState));

  if (NewState != DISABLE)
  {

    DMATxDesc->Status |= ETH_DMATxDesc_TCH;
  }
  else
  {

    DMATxDesc->Status &=(~(uint32_t)ETH_DMATxDesc_TCH);
  }
}
